bug fix #48220 use break-word instead of truncating string.

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Request.css
@@ -99,7 +99,7 @@
 .request-body-inner .request-text {
 	padding-top: 0.3em;
 	max-width: 440px;
-	word-break: break-all;
+	word-break: break-word;
 }
 
 .request-body-inner .edit-module-element {
